--- a/scss/cores.scss
+++ b/scss/cores.scss
@@ -1,9 +1,9 @@
-$verde1: rgba(1,160,42, 1);
-$verde2: rgba(1, 107,33, 1);
-$laranja1: rgba(239, 153,127, 1);
-$azul1: rgba(30, 162, 218, 1);
-$cinza1: rgba(229, 225,226, 1);
-$cinza2: rgba(239, 239,239, 1);
-$cinza3: rgba(167, 167,167, 1);
-$cinza4: rgba(228, 228,228, 1);
-$branco: rgba(255,255,255, 1)
+$green1: rgba(1,160,42, 1);
+$green2: rgba(1, 107,33, 1);
+$orange1: rgba(239, 153,127, 1);
+$blue1: rgba(30, 162, 218, 1);
+$grey1: rgba(229, 225,226, 1);
+$grey2: rgba(239, 239,239, 1);
+$grey3: rgba(167, 167,167, 1);
+$grey4: rgba(228, 228,228, 1);
+$white: rgba(255,255,255, 1)
