Estrutura do slider

--- a/scss/sizes.scss
+++ b/scss/sizes.scss
@@ -3,8 +3,8 @@ $margin1: 1em 0;
 
 //paddings
 $padding1: 1em 0;
-$padding2: 1em 0;
-
+$padding2: 2em 0;
+$padding3: 1.2em 1.4em;
 //Font
 $fontSizeDefault: 16px;
 $fontSizeBig: $fontSizeDefault * 1.5;
