--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,24 @@ h1, h2, h3, h4, h5, h6 {
 .button {
   border-radius: 20px;
   padding: 0.6em 0.2em;
-  text-align: center;
   text-transform: uppercase;
   font-weight: bold;
   display: block;
   text-decoration: none; }
   .button :visited {
     color: inherit; }
+
+.slider .slide {
+  padding: 2em 0; }
+  .slider .slide .card {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 1.2em 1.4em;
+    max-width: 400px; }
+    .slider .slide .card .button {
+      display: inline-block;
+      background: transparent;
+      color: white;
+      border: 4px solid white; }
 
 .courses hr {
   margin: 1.2em 0; }
@@ -53,6 +64,7 @@ h1, h2, h3, h4, h5, h6 {
       top: 0;
       right: 0; }
   .courses .card .button {
+    text-align: center;
     background: #01a02a;
     color: white; }
   .courses .card .card-wapper {
