--- a/scss/cores.scss
+++ b/scss/cores.scss
@@ -6,4 +6,5 @@ $grey1: rgba(229, 225,226, 1);
 $grey2: rgba(239, 239,239, 1);
 $grey3: rgba(167, 167,167, 1);
 $grey4: rgba(228, 228,228, 1);
-$white: rgba(255,255,255, 1)
+$white: rgba(255,255,255, 1);
+$blackOpac: rgba(0,0,0, 0.5)
