--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,7 +19,6 @@ h1, h2, h3, h4, h5, h6 {
 .button {
     border-radius: 20px;
     padding: 0.6em 0.2em;
-    text-align: center;
     text-transform: uppercase;
     font-weight: bold;
     display: block;
@@ -29,6 +28,23 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 //Main
+.slider {
+    .slide {
+        padding: $padding2;
+        .card {
+            background-color: $blackOpac;
+            padding: $padding3;
+            max-width: 400px;
+            .button {
+                display: inline-block;
+                background: transparent;
+                color: $white;
+                border: 4px solid $white;
+            }
+        }
+    }
+}
+
 
 //Cursos
 .courses {
@@ -66,6 +82,7 @@ h1, h2, h3, h4, h5, h6 {
             }
         }
         .button {
+            text-align: center;
             background: $green1;
             color: $white;
         }
@@ -109,7 +126,7 @@ footer {
 
     .footer-wapper {
         background-color: $white;
-        padding: $padding2;
+        padding: $padding1;
         display: inline-block;
         section {
             float: left;
