--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,19 +28,36 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 //Main
+//Slider
 .slider {
-    .slide {
-        padding: $padding2;
-        .card {
-            background-color: $blackOpac;
-            padding: $padding3;
-            max-width: 400px;
-            .button {
-                display: inline-block;
-                background: transparent;
-                color: $white;
-                border: 4px solid $white;
+    position: relative;
+    .slides {
+        .slide {
+            padding: $padding2;
+            .card {
+                background-color: $blackOpac;
+                padding: $padding3;
+                max-width: 400px;
+                .button {
+                    display: inline-block;
+                    background: transparent;
+                    color: $white;
+                    border: 4px solid $white;
+                }
             }
+        }
+    }
+    .slider-controls{
+        top: 50%;
+        position: absolute;
+        width: 100%;
+        .left_arrow{
+            margin-left: 25px;
+            float: left;
+        }
+        .right_arrow{
+            margin-right: 25px;
+            float: right;
         }
     }
 }
