--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,6 +33,10 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
     .slides {
         .slide {
+            &.active{
+                display: inherit;
+            }
+            display: none;
             padding: $padding2;
             .card {
                 background-color: $blackOpac;
