--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,14 @@ h1, h2, h3, h4, h5, h6 {
     .slider .slides .slide .card {
       background-color: rgba(0, 0, 0, 0.5);
       padding: 1.2em 1.4em;
-      max-width: 400px; }
+      max-width: 400px;
+      color: white; }
       .slider .slides .slide .card .button {
         display: inline-block;
         background: transparent;
-        color: white;
         border: 4px solid white; }
+        .slider .slides .slide .card .button:visited {
+          color: inherit; }
   .slider .slider-controls {
     top: 50%;
     position: absolute;
@@ -44,9 +46,15 @@ h1, h2, h3, h4, h5, h6 {
     .slider .slider-controls .left_arrow {
       margin-left: 25px;
       float: left; }
+      @media (max-width: 599px) {
+        .slider .slider-controls .left_arrow {
+          margin-left: 10px; } }
     .slider .slider-controls .right_arrow {
       margin-right: 25px;
       float: right; }
+      @media (max-width: 599px) {
+        .slider .slider-controls .right_arrow {
+          margin-right: 10px; } }
 
 .courses hr {
   margin: 1.2em 0; }
