--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,11 +42,14 @@ h1, h2, h3, h4, h5, h6 {
                 background-color: $blackOpac;
                 padding: $padding3;
                 max-width: 400px;
+                color: $white;
                 .button {
                     display: inline-block;
                     background: transparent;
-                    color: $white;
                     border: 4px solid $white;
+                    &:visited {
+                        color: inherit;
+                    }
                 }
             }
         }
@@ -58,10 +61,16 @@ h1, h2, h3, h4, h5, h6 {
         .left_arrow{
             margin-left: 25px;
             float: left;
+            @include for-phone-only{
+                margin-left: 10px;
+            }
         }
         .right_arrow{
             margin-right: 25px;
             float: right;
+            @include for-phone-only{
+                margin-right: 10px;
+            }
         }
     }
 }
