--- a/scss/sizes.scss
+++ b/scss/sizes.scss
@@ -1,8 +1,11 @@
 //margins
-$margin1: 1em 0;
-
+$margin10: 1em 0;
+$margin01: 0 1em;
+$margin11: 1em 1em;
 //paddings
 $padding1: 1em 0;
+$padding11: 1em 1em;
+$padding01: 0em 1em;
 $padding2: 2em 0;
 $padding3: 1.2em 1.4em;
 //Font
