--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   display: block;
   text-decoration: none; }
-  .button :visited {
+  .button:visited {
     color: inherit; }
 
 header {
@@ -114,8 +114,6 @@ header {
         display: inline-block;
         background: transparent;
         border: 4px solid white; }
-        .slider .slides .slide .card .button:visited {
-          color: inherit; }
   .slider .slider-controls {
     top: 50%;
     position: absolute;
@@ -227,3 +225,39 @@ footer .footer-social-media {
 
 footer .footer-copyright {
   padding: 1em 0; }
+
+.modal_block {
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%; }
+  .modal_block .modal {
+    position: relative;
+    margin: 5em auto;
+    width: 800px;
+    background-color: white;
+    border-radius: 10px; }
+    .modal_block .modal img {
+      border-radius: 10px 10px 0 0;
+      width: 100%; }
+    .modal_block .modal .login {
+      padding: 1em 10em; }
+    .modal_block .modal .button {
+      background-color: #1ea2da;
+      margin: 0 6em;
+      text-align: center;
+      color: white;
+      padding: 1em 0; }
+    .modal_block .modal .quit_button {
+      position: absolute;
+      top: -25px;
+      right: -25px;
+      width: 50px;
+      height: 50px;
+      box-shadow: 4px 4px 4px black;
+      border-radius: 28px;
+      background-color: transparent;
+      background-image: url(../img/icon_quit.png);
+      background-size: cover; }
