--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,7 +23,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
     display: block;
     text-decoration: none;
-    :visited {
+    &:visited {
         color: inherit;
     }
 }
@@ -145,9 +145,6 @@ header {
                     display: inline-block;
                     background: transparent;
                     border: 4px solid $white;
-                    &:visited {
-                        color: inherit;
-                    }
                 }
             }
         }
@@ -296,4 +293,44 @@ footer {
         
     }
 }
-
+.modal_block {
+    background: $blackOpac;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    .modal {
+        position: relative;
+        margin: 5em auto;
+        width: 800px;
+        background-color: $white;
+        border-radius: 10px;
+        img {
+            border-radius: 10px 10px 0 0;
+            width: 100%;
+        }
+        .login {
+            padding: 1em 10em;
+        }
+        .button {
+            background-color: $blue1;
+            margin: 0 6em;
+            text-align: center;
+            color: $white;
+            padding: $padding1;
+        }
+        .quit_button {
+            position: absolute;
+            top: -25px;
+            right: -25px;
+            width: 50px;
+            height: 50px;
+            box-shadow: 4px 4px 4px $black;
+            border-radius: 28px;
+            background-color: transparent;
+            background-image: url(../img/icon_quit.png);
+            background-size: cover;
+        }
+    }
+}
