--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap");
 body {
+  font-family: "Roboto", sans-serif;
   padding: 0;
   margin: 0;
   background-color: #efefef; }
