--- a/scss/cores.scss
+++ b/scss/cores.scss
@@ -8,4 +8,5 @@ $grey3: rgba(167, 167,167, 1);
 $grey4: rgba(228, 228,228, 1);
 $white: rgba(255,255,255, 1);
 $black: rgba(0,0,0, 1);
+$black: rgba(0,0,0, 1);
 $blackOpac: rgba(0,0,0, 0.5);
